--- a/ClientApp/src/app/pulsacion/persona-consultar/persona-consultar.component.html
+++ b/ClientApp/src/app/pulsacion/persona-consultar/persona-consultar.component.html
@@ -1,7 +1,7 @@
 <p>persona-consultar works!</p>
 <div class="row">
         <div class="col-6">
-          <input [(ngModel)]="seachText" type="text" class="form-control" placeholder="Type to filter">
+          <input [(ngModel)]="searchText" type="text" class="form-control" placeholder="Type to filter">
         </div>
       </div>
       <hr>
